tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_661/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _13",
    "private parameters indices : [_0, _1, _2, _3, _4]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "BLACKBOX::RANGE [_2]:32 bits []",
    "BLACKBOX::RANGE [_3]:32 bits []",
    "BLACKBOX::RANGE [_4]:32 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 4294967301 ], EXPR [ 4294967296 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [_5]:1 bits []",
    "BLACKBOX::RANGE [_6]:32 bits []",
    "EXPR [ (-1, _0) (-4294967296, _5) (-1, _6) 4294967301 ]",
    "EXPR [ (-1, _1, _5) (1, _1) (-1, _5) (-1, _7) 1 ]",
    "BLACKBOX::RANGE [_7]:32 bits []",
    "EXPR [ (-1, _0, _5) (-1, _5, _7) (1, _0) (1, _7) (-1, _8) 0 ]",
    "BLACKBOX::RANGE [_8]:32 bits []",
    "EXPR [ (1, _1, _5) (1, _5) (-1, _9) 0 ]",
    "BLACKBOX::RANGE [_9]:32 bits []",
    "EXPR [ (1, _0, _5) (2, _5) (-1, _10) 0 ]",
    "BLACKBOX::RANGE [_10]:32 bits []",
    "EXPR [ (1, _5, _9) (1, _5, _10) (-1, _11) 0 ]",
    "BLACKBOX::RANGE [_11]:32 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _5, _8) (1, _5, _11) (1, _8) 4294947296 ], EXPR [ 4294967296 ]], outputs: [_12, _13]",
    "BLACKBOX::RANGE [_13]:32 bits []",
    "EXPR [ (-1, _5, _8) (1, _5, _11) (1, _8) (-4294967296, _12) (-1, _13) 4294947296 ]",
    "EXPR [ (-1, _12) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
